Practice files are adding 2nd tiume

--- a/Array.html
+++ b/Array.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script>
-        alert('hekljhlkjkfdj')
-    </script>
+    <title>Array in JS</title>
+<script>
+    var foodlist=['apple' , 'orange', 'lemon'];
+    console.log(foodlist);
+    console.log('length of array is :' +foodlist.length);
+    // console.log(foodlist.length);
+</script>
+
 </head>
 <body>
-    <a href="#"  onclick="alert('fuck you')"; >Click me</a>
+    
 </body>
 </html>
