--- a/Events.html
+++ b/Events.html
@@ -4,12 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script>
-        alert('hekljhlkjkfdj')
-    </script>
+    <title>Events in JS</title>
 </head>
 <body>
-    <a href="#"  onclick="alert('fuck you')"; >Click me</a>
+<a href="#" onclick="alert('hello ijn jhdj')">ON CLICK</a>
+<a href="#" onmouseover="alert('hello ijn jhdj')">ON mouse</a>
 </body>
 </html>
