--- a/Internal_js.html
+++ b/Internal_js.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>internal javasript</title>
     <script>
-        alert("You are fucked up  হোগা মারা খা");
+        alert(" হোগা মারা খা");
     </script>
 </head>
 <body>
