--- a/variables.html
+++ b/variables.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Variable declaration and their usage</title>
     <script>
-        alert('hekljhlkjkfdj')
+var massage;
+massage="This comes from a variable.";
+alert(massage);
+console.log(massage);
+
     </script>
 </head>
 <body>
-    <a href="#"  onclick="alert('fuck you')"; >Click me</a>
+    
 </body>
 </html>
