--- a/Date_and_time.html
+++ b/Date_and_time.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Date and time</title>
     <script>
-        alert('hekljhlkjkfdj')
+        let today = new Date();
+        console.log(today.toDateString());
     </script>
 </head>
 <body>
-    <a href="#"  onclick="alert('fuck you')"; >Click me</a>
+    <script>
+        // let today = new Date();
+        document.write(today.toDateString());
+    </script>
 </body>
 </html>
