Adding new things 3rd time.

--- a/Array.html
+++ b/Array.html
@@ -10,6 +10,17 @@
     console.log(foodlist);
     console.log('length of array is :' +foodlist.length);
     // console.log(foodlist.length);
+
+
+// another methods of declaring array
+    let names= new Array();
+    names[0]="Ashik";
+    names[1]="Rifat";
+    names[2]="malek";
+    names[3]="izaz";
+
+    console.log(names[3]);
+    // mentioning size is not mendatory.
 </script>
 
 </head>
