--- a/string_operations.html
+++ b/string_operations.html
@@ -11,18 +11,21 @@
         // var output="<strong>Welcome "+first+ " "+last+ "</strong>";
         var output=first+ last ;
 
-        var n1=prompt('enter number 1:');
-        var n2=prompt('enter number 2:');
-        var sum=(n1+n2);
+     
 
-    </script>
+
+        // Library functions for strings
+let text="Ashikur Rahman";
+
+</script>
 </head>
 <body>
-<script>
+    <script>
+    document.write(text.length);
 
     document.write(output);
 
-    document.write(sum);
+    // document.write(sum);
     // alert("your sumvis :" +sum);
 </script>
 </body>
